tests/ui/pin_project/packed-name-value.stderr
error: #[repr(packed)] attribute should not be name-value pair
  --> tests/ui/pin_project/packed-name-value.rs:18:8
   |
18 | #[repr(packed = "")] //~ ERROR attribute should not be name-value pair
   |        ^^^^^^^^^^^

error: #[repr(packed)] attribute should not be name-value pair
  --> tests/ui/pin_project/packed-name-value.rs:23:8
   |
23 | #[repr(packed = "")] //~ ERROR attribute should not be name-value pair
   |        ^^^^^^^^^^^

error[E0539]: malformed `repr` attribute input
  --> tests/ui/pin_project/packed-name-value.rs:18:1
   |
18 | #[repr(packed = "")] //~ ERROR attribute should not be name-value pair
   | ^^^^^^^-----------^^
   |        |
   |        expected a list or no arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error[E0539]: malformed `repr` attribute input
  --> tests/ui/pin_project/packed-name-value.rs:23:1
   |
23 | #[repr(packed = "")] //~ ERROR attribute should not be name-value pair
   | ^^^^^^^-----------^^
   |        |
   |        expected a list or no arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>
